--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #ff0000;
     color: white;
     padding: 20px;
 }
@@ -17,7 +17,7 @@ nav ul {
 }
 
 nav li {
-    float: left;
+    float: right;
 }
 
 nav li a {
